[gd_scene load_steps=56 format=3 uid="uid://dgna7p5elvtjm"]

[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="1_3oq1j"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_t485f"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="2_qoktu"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="3_q6skx"]
[ext_resource type="Texture2D" uid="uid://coh6rer503pps" path="res://sprites/player/Attack1.png" id="4_bs8br"]
[ext_resource type="Texture2D" uid="uid://wlkryat3bic7" path="res://sprites/player/Glide.png" id="5_ot3rd"]
[ext_resource type="Texture2D" uid="uid://b2sph5wp35n8b" path="res://sprites/player/Death.png" id="5_xivl0"]
[ext_resource type="Texture2D" uid="uid://c6ko8tny0rcoa" path="res://sprites/player/Fall.png" id="6_ik2i8"]
[ext_resource type="Texture2D" uid="uid://dp8wwidw5agbi" path="res://sprites/player/Idle.png" id="7_p10be"]
[ext_resource type="Texture2D" uid="uid://cktp44aic1c8h" path="res://sprites/player/Jump.png" id="8_jcn07"]
[ext_resource type="Texture2D" uid="uid://dpolx4r53603w" path="res://sprites/player/Run.png" id="9_238af"]
[ext_resource type="Texture2D" uid="uid://d3rwhmahkhffh" path="res://sprites/ui/heart_full.png" id="10_5rr2n"]
[ext_resource type="Texture2D" uid="uid://cjdcn7po4rjeu" path="res://sprites/player/Take hit.png" id="10_43f6i"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="12_1ugos"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="15_1q7el"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4n77o"]
atlas = ExtResource("4_bs8br")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n58p8"]
atlas = ExtResource("4_bs8br")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fln67"]
atlas = ExtResource("4_bs8br")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2gx2"]
atlas = ExtResource("4_bs8br")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6423d"]
atlas = ExtResource("4_bs8br")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2udu"]
atlas = ExtResource("5_xivl0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygxit"]
atlas = ExtResource("5_xivl0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow4v8"]
atlas = ExtResource("5_xivl0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i44v"]
atlas = ExtResource("5_xivl0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkjbv"]
atlas = ExtResource("5_xivl0")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqwsh"]
atlas = ExtResource("5_xivl0")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi2e1"]
atlas = ExtResource("5_xivl0")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmye8"]
atlas = ExtResource("5_xivl0")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqk11"]
atlas = ExtResource("6_ik2i8")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx1w0"]
atlas = ExtResource("6_ik2i8")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_683me"]
atlas = ExtResource("5_ot3rd")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_46qul"]
atlas = ExtResource("5_ot3rd")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wax7d"]
atlas = ExtResource("7_p10be")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nupb"]
atlas = ExtResource("7_p10be")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fskbc"]
atlas = ExtResource("7_p10be")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j3sx"]
atlas = ExtResource("7_p10be")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_olf8q"]
atlas = ExtResource("7_p10be")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6jpi"]
atlas = ExtResource("7_p10be")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_j61nu"]
atlas = ExtResource("7_p10be")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_osbvw"]
atlas = ExtResource("7_p10be")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4xa0"]
atlas = ExtResource("8_jcn07")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhdry"]
atlas = ExtResource("8_jcn07")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o36wn"]
atlas = ExtResource("9_238af")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1io3"]
atlas = ExtResource("9_238af")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpub5"]
atlas = ExtResource("9_238af")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_776ww"]
atlas = ExtResource("9_238af")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mx78"]
atlas = ExtResource("9_238af")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kclm"]
atlas = ExtResource("9_238af")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb63g"]
atlas = ExtResource("9_238af")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8cdg"]
atlas = ExtResource("9_238af")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jauuv"]
atlas = ExtResource("10_43f6i")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3jvf"]
atlas = ExtResource("10_43f6i")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7i7b"]
atlas = ExtResource("10_43f6i")
region = Rect2(300, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_lt44i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n77o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n58p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fln67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2gx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6423d")
}],
"loop": false,
"name": &"Attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2udu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygxit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow4v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i44v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkjbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqwsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi2e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmye8")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqk11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx1w0")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_683me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46qul")
}],
"loop": true,
"name": &"Glide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wax7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nupb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fskbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j3sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olf8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6jpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j61nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osbvw")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4xa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhdry")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o36wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1io3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpub5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_776ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mx78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kclm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb63g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8cdg")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jauuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3jvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7i7b")
}],
"loop": false,
"name": &"TakeHit",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fjgps"]
radius = 8.0
height = 40.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_t485f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lt44i")
animation = &"Death"
autoplay = "Idle"
frame = 7
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_fjgps")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HealthContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 4

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer/HealthContainer"]
layout_mode = 2
texture = ExtResource("10_5rr2n")

[node name="StateChartDebugger" parent="CanvasLayer" instance=ExtResource("15_1q7el")]
visible = false
custom_minimum_size = Vector2(300, 300)
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -300.0
offset_bottom = 300.0
grow_horizontal = 0
grow_vertical = 1
enabled = false
initial_node_to_watch = NodePath("../../StateChart")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("1_3oq1j")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("2_qoktu")
initial_state = NodePath("Movement")

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("2_qoktu")
initial_state = NodePath("Grounded")

[node name="OnDeath" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("12_1ugos")
to = NodePath("../../Death")
event = &"death"

[node name="OnTakeHit" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("12_1ugos")
to = NodePath("../TakeHit")
event = &"take_hit"

[node name="Grounded" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("2_qoktu")
initial_state = NodePath("Idle")

[node name="OnJump" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("12_1ugos")
to = NodePath("../../Airborne/Jump")
event = &"jump"

[node name="OnAttack" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("12_1ugos")
to = NodePath("../../Attack")
event = &"attack"

[node name="OnFalling" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("12_1ugos")
to = NodePath("../../Airborne/Fall")
event = &"falling"

[node name="Idle" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("3_q6skx")

[node name="OnMoving" type="Node" parent="StateChart/Root/Movement/Grounded/Idle"]
script = ExtResource("12_1ugos")
to = NodePath("../../Run")
event = &"moving"

[node name="Run" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("3_q6skx")

[node name="OnIdle" type="Node" parent="StateChart/Root/Movement/Grounded/Run"]
script = ExtResource("12_1ugos")
to = NodePath("../../Idle")
event = &"idle"

[node name="Airborne" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("2_qoktu")
initial_state = NodePath("Fall")

[node name="OnGrounded" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("12_1ugos")
to = NodePath("../../Grounded")
event = &"grounded"

[node name="Jump" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("3_q6skx")

[node name="OnFalling" type="Node" parent="StateChart/Root/Movement/Airborne/Jump"]
script = ExtResource("12_1ugos")
to = NodePath("../../Fall/NoJump")
event = &"falling"

[node name="OnGlide" type="Node" parent="StateChart/Root/Movement/Airborne/Jump"]
script = ExtResource("12_1ugos")
to = NodePath("../../Glide")
event = &"glide"

[node name="Fall" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("2_qoktu")
initial_state = NodePath("CanJump")

[node name="CanJump" type="Node" parent="StateChart/Root/Movement/Airborne/Fall"]
script = ExtResource("3_q6skx")

[node name="OnExpiration" type="Node" parent="StateChart/Root/Movement/Airborne/Fall/CanJump"]
script = ExtResource("12_1ugos")
to = NodePath("../../NoJump")
delay_seconds = 0.2

[node name="OnJump" type="Node" parent="StateChart/Root/Movement/Airborne/Fall/CanJump"]
script = ExtResource("12_1ugos")
to = NodePath("../../../Jump")
event = &"jump"

[node name="NoJump" type="Node" parent="StateChart/Root/Movement/Airborne/Fall"]
script = ExtResource("3_q6skx")

[node name="OnGlide" type="Node" parent="StateChart/Root/Movement/Airborne/Fall"]
script = ExtResource("12_1ugos")
to = NodePath("../../Glide")
event = &"glide"

[node name="Glide" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("3_q6skx")

[node name="OnGlide" type="Node" parent="StateChart/Root/Movement/Airborne/Glide"]
script = ExtResource("12_1ugos")
to = NodePath("../../Fall")
event = &"glide"

[node name="Attack" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("3_q6skx")

[node name="OnFinished" type="Node" parent="StateChart/Root/Movement/Attack"]
script = ExtResource("12_1ugos")
to = NodePath("../../Grounded/Idle")
event = &"finished"

[node name="TakeHit" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("3_q6skx")

[node name="OnFinished" type="Node" parent="StateChart/Root/Movement/TakeHit"]
script = ExtResource("12_1ugos")
to = NodePath("../../Grounded/Idle")
event = &"finished"

[node name="Death" type="Node" parent="StateChart/Root"]
script = ExtResource("3_q6skx")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Grounded" to="." method="_on_jump_enabled_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Grounded/Idle" to="." method="_play_animation" binds= ["Idle"]]
[connection signal="state_entered" from="StateChart/Root/Movement/Grounded/Run" to="." method="_play_animation" binds= ["Run"]]
[connection signal="state_entered" from="StateChart/Root/Movement/Airborne/Jump" to="." method="_play_animation" binds= ["Jump"]]
[connection signal="state_entered" from="StateChart/Root/Movement/Airborne/Fall" to="." method="_play_animation" binds= ["Fall"]]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Airborne/Fall/CanJump" to="." method="_on_jump_enabled_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Airborne/Glide" to="." method="_on_glide_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Movement/Airborne/Glide" to="." method="_play_animation" binds= ["Glide"]]
[connection signal="state_exited" from="StateChart/Root/Movement/Airborne/Glide" to="." method="_on_glide_state_exited"]
[connection signal="state_entered" from="StateChart/Root/Movement/Attack" to="." method="_play_animation" binds= ["Attack"]]
[connection signal="state_entered" from="StateChart/Root/Movement/TakeHit" to="." method="_play_animation" binds= ["TakeHit"]]
[connection signal="state_entered" from="StateChart/Root/Death" to="." method="_on_death_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Death" to="." method="_play_animation" binds= ["Death"]]
